# zero-trust-net

./: .env.example  .gitignore  README.md  docker-compose.yml  install.sh  pyproject.toml
agent/: README.md  agent.py  client.py  pyproject.toml  websocket_client.py
agent/collectors/: __init__.py  host_info.py
agent/firewall/: iptables.py
agent/hub/: __init__.py  command_executor.py  hub_agent.py  pyproject.toml  websocket_handler.py
agent/hub/firewall/: __init__.py  forwarding.py  iptables.py
agent/hub/status/: __init__.py  interface_status.py  peer_stats.py
agent/hub/wireguard/: __init__.py  manager.py  peer_manager.py
agent/node/: __init__.py  agent.py  client.py  pyproject.toml  websocket_client.py
agent/node/collectors/: __init__.py  agent_integrity.py
agent/node/firewall/: iptables.py
agent/node/wireguard/: manager.py
agent/wireguard/: config_builder.py  manager.py
control-plane/: .env.example  config.py  main.py  pyproject.toml  schemas.py
control-plane/api/: api.py
control-plane/core/: agent_integrity.py  client_manager.py  domain_events.py  event_handlers.py  events.py  ipam.py  node_manager.py  policy_engine.py  trust_engine.py  user_policy_manager.py
control-plane/database/: models.py  session.py
control-plane/schemas/: config.py  policy.py  user_policy.py
docs/: HIGH_AVAILABILITY.md  README.MD  WORKFLOW.md  ZERO_TRUST_ARCHITECTURE.md
docs/chat/: 2025-12-26.md  2025-12-29_14h26.md  2025-12-29_20h36.md  2025-12-29_23h17.md  2026-12-26.md  2026-12-26_18h14m.md  2026-12-26_22h00m.md  2026-12-27_14h20.md  2026-12-27_16h00.md  test_2025-12-27_16h45.md
docs/issues/: 2025-12-27_18h10.md  2025-12-28-Đánh giá Dự án Theo Tiêu Chí NIST.md  2025-12-29_10h00_Đánh_giá_bảo_mật.md  Cải thiện kiến trúc Zero Trust.md  Mở rộng hỗ trợ Mobile - Laptop Client.md  Zero Trust Web Dashboard với Sigma JS.md
docs/references/: zero-trust-security-model.md
infrastructure/ansible/: ansible.cfg  deploy-site.yml
infrastructure/docker/: Caddyfile  Dockerfile.control
logs/: log.sh
playbooks/: deploy-worker-nodes.yml  lockdown-ssh.yml  security-hardening.yml  setup-full-mesh.yml
policies/: global.yaml
policies/roles/: app.yaml  database.yaml  ops.yaml
scripts/: add-node.sh  health-check.sh  install-agent.sh  install.sh  ztctl
scripts/hub/: add-secondary.sh  install.sh  install.sh.bak  uninstall.sh
scripts/lib/: common.sh
scripts/node/: install.sh  install.sh.bak
scripts/policy/: apply.sh
tests/: uninstall.sh  uninstall_test.sh
tests/agent/: agent_test.sh  conftest.py  install_agent_test.sh  pytest.ini  run_integrity_tests.sh  test_agent_integrity.py  test_case.md  test_integrity_README.md  test_integrity_integration.py  test_integrity_service.py
tests/client/: client_test.sh
tests/control-plane/: peer_test.sh
tests/install/: new_install_test.sh
tests/workflow/: event_driven_test.sh
web-ui/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
web-ui/src/: App.tsx  index.css  (+2 more)
(+46 files in other folders)
