[project]
name = "zero-trust-net"
version = "0.1.0"
description = "Zero Trust Architecture Control Plane & Agent"
requires-python = ">=3.10"
dependencies = []

[tool.uv.workspace]
# Khai báo các thành viên trong workspace
members = ["control-plane", "agent"]

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.45",
]
