[project]
name = "zt-node-agent"
version = "1.0.0"
description = "Zero Trust Node Agent - VPS client daemon"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Zero Trust Team" }]

# No external dependencies required (uses stdlib)
dependencies = []

[project.optional-dependencies]
full = [
    "psutil>=5.9.8",     # Better resource collection
    "distro>=1.9.0",     # Linux distro detection
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
node-agent = "agent:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
